Grace/tests/gibbs/errors/t062.grace
// ERROR = P1018
method print(a)and(b) {}

print(42)and("Vogon",)
